# DevLens

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
devlens/: README.md  __init__.py  cli.py  test.py
devlens/analyzer/: ai_summary.py  deadcode.py  dependencies.py  empty_functions.py  readme_gen.py  stats.py  summary.py  voice.py
devlens/cli/: cli.py
devlens/config/: settings.py
devlens/console/: incorrect_path.py
devlens/llm/: client.py  exception.py
devlens/prompt/: ai_summary_prompt.py  readme_gen_prompt.py
devlens/render/: printer.py
devlens/utils/: check_the_path.py  count_folders.py  count_lines_and_files.py  deadcode_analyze.py  get_git_root.py  get_size_project.py  get_tree_project.py  gitignore.py  has_file.py  has_readme.py  questionary_file.py  questionary_readme.py  repo_file_finder.py  structure_counts.py  structure_the_project.py
output/: voice_summary.txt
tests/: perm_test.py  test.py  test1.py  test_llm_client.py
