[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "devlens"
version = "0.1.0"
description = "Test CLI"
dependencies = [
    "click",
    "httpx",
    "pydantic",
    "rich",
    "typer",
    "python-dotenv",
]

[project.scripts]
devlens =   "devlens.cli:app"
