[project]
name = "devlens"
version = "0.1.0"
description = "A cli tool to help developers understand and manage their codebases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typer>=0.17.4",
]
authors = [{ name = "Younes BENSAFIA", email = "bensafia.younes.usthb@gmail.com" }]


[tool.uv]
package = true

[project.scripts]
devlens = "devlens.cli.cli:main"