[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlens-cli"
version = "0.1.0"
description = "A cli tool to help developers understand and manage their codebases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typer>=0.17.4",
]
authors = [{ name = "Younes BENSAFIA", email = "bensafia.younes.usthb@gmail.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/YounesBensafia/DevLens"
Repository = "https://github.com/YounesBensafia/DevLens"
Issues = "https://github.com/YounesBensafia/DevLens/issues"


[tool.uv]
package = true

[project.scripts]
devlens = "devlens.cli.cli:main"